# moltimol

./: .gitignore  AGENT.md  CO.xyz  README.md  mcp_server.example.json  moltimol_helper.py  psi4geom_to_xyz.py  pyproject.toml  sample_molecules.py
moltimol/: MLdms.py  MLdms_general.py  __init__.py  data_curation.py  dipoles_helper.py  mcp_server.py  n2_n2_scan.py
tests/: test_data_curation.py  test_dipoles_helper.py  test_mldms_general.py
