[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "moltimol"
version = "0.1.0"
description = "Helpers for generating molecular dimer geometries and sampling PESs."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
ase = ["ase"]
mcp = ["mcp"]

[project.scripts]
moltimol-mcp = "moltimol.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["moltimol*"]
